--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/main.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Blog</title>
   </head>
   <body>
     <noscript>
